--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ canvas.addEventListener('touchcancel', e => {
 
 
 // Initialize with a default image to start quickly:
-img.src = 'https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80';
+img.src = 'images/default.jpeg';
 img.onload = () => {
   setupPuzzle();
 };
