--- a/index.html
+++ b/index.html
@@ -522,8 +522,34 @@ canvas.addEventListener('touchstart', e => {
   e.preventDefault();
   if (e.touches.length === 1) {
     const { x, y } = getCanvasCoordinates(e);
-    startDrag(x, y);
+   
+
+  const currentTime = new Date().getTime();
+  const timeSinceLastTouch = currentTime - lastTouchTime;
+
+  if (timeSinceLastTouch < 300 && e.touches.length === 1) { 
+    // Find the topmost piece under double touch
+    for (let i = pieces.length - 1; i >= 0; i--) {
+      const p = pieces[i];
+      if (
+        x >= p.x &&
+        x <= p.x + pieceWidth + 2 * overlap &&
+        y >= p.y &&
+        y <= p.y + pieceHeight + 2 * overlap &&
+        !p.placed
+      ) {
+        // Ungroup this piece by assigning a new unique group ID
+        p.group = ++groupIdCounter;
+        draw();
+        break;
+      }
+    }
+  }else if (e.touches.length === 1) {
+     startDrag(x, y);
   }
+
+  lastTouchTime = currentTime;
+}
 }, { passive: false });
 
 canvas.addEventListener('touchmove', e => {
