--- a/index.html
+++ b/index.html
@@ -473,37 +473,36 @@ canvas.addEventListener('mouseleave', e => {
 });
 
 // --- Touch events ---
-let lastTouchTime = 0;
 
 canvas.addEventListener('touchstart', e => {
   e.preventDefault();
 
-//   const currentTime = new Date().getTime();
-//   const timeSinceLastTouch = currentTime - lastTouchTime;
+  const currentTime = new Date().getTime();
+  const timeSinceLastTouch = currentTime - lastTouchTime;
   const { x, y } = getCanvasCoordinates(e);
-//   if (timeSinceLastTouch < 300 && e.touches.length === 1) {
-//     // Find the topmost piece under double touch
-//     for (let i = pieces.length - 1; i >= 0; i--) {
-//       const p = pieces[i];
-//       if (
-//         x >= p.x &&
-//         x <= p.x + pieceWidth + 2 * overlap &&
-//         y >= p.y &&
-//         y <= p.y + pieceHeight + 2 * overlap &&
-//         !p.placed
-//       ) {
-//         // Ungroup this piece by assigning a new unique group ID
-//         p.group = ++groupIdCounter;
-//         draw();
-//         break;
-//       }
-//     }
-//   } else if (e.touches.length === 1) {
+  if (timeSinceLastTouch < 300 && e.touches.length === 1) {
+    // Find the topmost piece under double touch
+    for (let i = pieces.length - 1; i >= 0; i--) {
+      const p = pieces[i];
+      if (
+        x >= p.x &&
+        x <= p.x + pieceWidth + 2 * overlap &&
+        y >= p.y &&
+        y <= p.y + pieceHeight + 2 * overlap &&
+        !p.placed
+      ) {
+        // Ungroup this piece by assigning a new unique group ID
+        p.group = ++groupIdCounter;
+        draw();
+        break;
+      }
+    }
+  } else if (e.touches.length === 1) {
     
     startDrag(x, y);
-//   }
+  }
 
-//   lastTouchTime = currentTime;
+  lastTouchTime = currentTime;
 }, { passive: false });
 
 canvas.addEventListener('touchmove', e => {
