--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 </head>
 <body>
 
-<h1>Jigsaw Puzzle for My Love 💖</h1>
+<h1>Puzzle 💖</h1>
 <input type="file" id="upload" accept="image/*" />
-<button id="reset">Reset Puzzle</button>
+<button id="reset">Yenile</button>
 <br />
 <canvas id="puzzleCanvas" width="1000" height="800"></canvas>
-
+<h3>Parcayi butun grupdan ayirmak icin parcaya iki kere tiklayiniz</h3>
 <script>
 const canvas = document.getElementById('puzzleCanvas');
 const ctx = canvas.getContext('2d');
